# notoil

./: README.md  git-conventional-commits.yaml  notoil.py  pyproject.toml  pytest.ini  requirements.txt  tox.ini
.github/workflow/: build.yaml  release.yaml
.github/workflows/: check.yaml  release.yaml
notoil/: __main__.py
notoil/commands/: network.py  totp.py
notoil/commands/k8s/: exec.py  main.py  pod.py  ssh.py
notoil/utils/: generate.py  random.py
tests/: setup.py  test_network.py  test_totp.py
