# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notoil"
version = "0.0.1"
description = "A CLI application to reduce SRE toil"
readme = "README.md"
authors = [{ name = "killshotrevival", email = "peeyush12210@gmail.com" }]
dependencies = [
    "click >= 8.1.3",
]

[tool.setuptools.packages.find]
where = ["."]  # Default, so optional

[project.scripts]
notoil = "notoil.__main__:cli"